Fix overflow issue on the body

--- a/style.css
+++ b/style.css
@@ -126,9 +126,7 @@ nav {
 }
 
 .description-text {
-  margin-top: 40px;
-  margin-right: 24px;
-  margin-left: 24px;
+  margin-top: 30px;
   text-align: center;
 }
 
@@ -357,7 +355,6 @@ nav {
 
 .portfolio-description-section ul {
   display: flex;
-  justify-content: space-around;
   align-items: center;
   padding: 0;
   margin: 0;
@@ -368,6 +365,7 @@ nav {
   list-style-type: none;
   border-right: 1px solid #555;
   height: 100%;
+  padding: 0 1vw;
 }
 
 .portfolio-description-section ul > li:last-child {
@@ -376,7 +374,6 @@ nav {
 
 .portfolio-description-section li > p {
   color: var(--dark);
-  padding-right: 20px;
   font-size: 15px;
   font-weight: 500;
   line-height: 20px;
@@ -633,7 +630,6 @@ footer form {
 
   .description-text p {
     max-width: 500px;
-    height: 155px;
     margin: 0;
     font-size: 20px;
     font-style: normal;
